--- a/media/css/styles.global.css
+++ b/media/css/styles.global.css
@@ -8,16 +8,19 @@
 a:link, a:visited, a:active {color:#07A;}
 a:hover {color:#FFF;background-color:#369;}
 
-#body-header {background-color:#CFC;padding:5px 10px;border-bottom:1px solid #AAA;}
+#body-header {background-color:#488E6B;padding:5px 10px;border-bottom:1px solid #AAA;}
 #body-header .logo {float:left;}
 #body-header .logo img {position:absolute;left:10px;top:5px;}
-#body-header .logo .subname {padding:5px 0px 5px 132px;font-size:108%;color:#777;}
-#body-header .logo .name {padding-left:132px;font-size:153.9%;font-weight:bold;color:#555;}
+#body-header .logo .subname {padding:5px 0px 5px 132px;font-size:108%;color:#DDD;}
+#body-header .logo .name {padding-left:132px;font-size:153.9%;font-weight:bold;color:#FFF;}
+#body-header .logo a {color:#FFF;text-decoration:none;}
+#body-header .logo a:hover {color:#FFF;background:none;}
 #body-header .right_panel {text-align:right;}
-#body-header .right_panel .account {font-size:108%;margin-bottom:15px;}
-#body-header .right_panel .account .username {color:#444;margin-right:8px;}
-#body-header .right_panel .navigation {font-size:108%;margin-bottom:5px;}
-#body-header .right_panel .navigation a {background-color:#7A7;color:#FFF;text-decoration:none;padding:3px 10px;margin-left:15px;}
+#body-header .right_panel .account {font-size:108%;margin-bottom:15px;color:#FFF;}
+#body-header .right_panel .account .username {margin-right:8px;}
+#body-header .right_panel .account a {color:#CFF;}
+#body-header .right_panel .navigation {font-size:108%;margin-bottom:5px;color:#FFF;}
+#body-header .right_panel .navigation a {color:#FFF;text-decoration:none;padding:2px 10px;margin:0px 5px;}
 #body-header .right_panel .navigation a:hover {background-color:#369;}
 
 #body-title {background-color:#EEE;padding:5px 15px;border-top:1px solid #CCC;border-bottom:1px solid #BBB;}
@@ -47,7 +50,7 @@ a:hover {color:#FFF;background-color:#369;}
 
 /* Breadcrumbs */
 .ss_breadcrumbs .breadcrumbs {margin-bottom:8px;}
-.ss_breadcrumbs h2 {font-size:146.5%;margin-bottom:20px;padding-bottom:5px;border-bottom:5px solid #CCC;}
+.ss_breadcrumbs h2 {font-size:131%;background-color:#CCC;margin-bottom:20px;padding:8px 10px 5px;border-bottom:5px solid #488E6B;}
 .ss_breadcrumbs .supertitle {margin:5px 0px;font-size:108%;color:#555;}
 .ss_breadcrumbs .subtitle {margin:10px 0px 5px;color:#444;}
 .ss_breadcrumbs .link_backward {margin:0px 0px 20px;}
@@ -62,11 +65,11 @@ a:hover {color:#FFF;background-color:#369;}
 .ss_messages li.error {padding-left:32px;background:url(../images/icons/error.png) 10px center #FAA no-repeat;}
 
 /* Control Panel */
-.ss_control_panel {margin:5px 0px 15px;}
-.ss_control_panel ul {border-bottom:1px solid #999;background-color:#B2D2D7;}
-.ss_control_panel ul li {font-size:108%;color:#333;padding:8px 15px;display:inline-block;display:-moz-inline-stack;*display:inline;list-style:none;zoom:1;}
+.ss_control_panel {margin:0px 0px 20px;}
+.ss_control_panel ul {border-bottom:2px solid #999;background-color:#FFF;}
+.ss_control_panel ul li {font-size:108%;color:#333;margin-right:25px;padding:3px 0px 10px;display:inline-block;display:-moz-inline-stack;*display:inline;list-style:none;zoom:1;}
 .ss_control_panel ul li img {margin-right:5px;vertical-align:middle;}
-.ss_control_panel ul li a {color:#333 !important;}
+.ss_control_panel ul li a {}
 .ss_control_panel ul li a:hover {color:#FFF !important;}
 
 .ss_sub_control_panel {margin-bottom:15px;}
