--- a/templates/page_base.html
+++ b/templates/page_base.html
@@ -25,7 +25,7 @@
     <div class="logo">
         <a href="/"><img src="{{MEDIA_URL}}/images/base/thaihealth_color_small.png" /></a>
         <div class="subname">สำนักงานกองทุนสนับสนุนการสร้างเสริมสุขภาพ (สสส.)</div>
-        <div class="name">Strategy Management Systems</div>
+        <div class="name"><a href="/">Strategy Management Systems</a></div>
     </div>
     <div class="right_panel">
         <div class="account">
