--- a/templates/page_program/program_reports_manage.html
+++ b/templates/page_program/program_reports_manage.html
@@ -22,11 +22,13 @@ $(document).ready(function() {
     <h2>จัดการหัวเรื่องรายงาน</h2>
 </div>
 
+{% access user 'program report schedule add' program %}
 <div class="ss_control_panel">
     <ul>
         <li><img src="{{MEDIA_URL}}/images/toolbar/create.png" class="icon"/><a href="{% url view_program_reports_manage_report_add_report program.id %}">เพิ่มหัวเรื่องรายงาน</a></li>
     </ul>
 </div>
+{% endaccess %}
 
 <div class="program_reports_page_manage"> 
     <h3>รายงานภายในแผนงาน</h3>
@@ -42,14 +44,22 @@ $(document).ready(function() {
             <div class="due">
                 <span class="caption">กำหนดส่งรายงาน:</span> {% display_report_due report %}
             </div>
+			
+			{% access user 'program report schedule edit,program report schedule delete' program %}
 			<div class="actions">
+				{% access user 'program report schedule edit' program %}
                 <span><img src="{{MEDIA_URL}}/images/page/report_edit.png" class="icon"/> <a href="{% url view_program_reports_manage_report_edit_report report.id %}" title="แก้ไขรอบการส่งรายงาน">แก้ไข</a></span>
-                {% if report.removable %}
+                {% endaccess %}
+				
+				{% access user 'program report schedule delete' program %}
+				{% if report.removable %}
                 <span><img src="{{MEDIA_URL}}/images/page/report_delete.png" class="icon"/> <a href="{% url view_program_reports_manage_report_delete_report report.id  %}" title="ลบรอบการส่งรายงาน" class="delete-report">ลบ</a></span>
                 {% else %}
                 <span title="ไม่สามารถลบรายงานที่มีการส่งรายงานแล้วได้"><img src="{{MEDIA_URL}}/images/page/report_delete.png" class="icon"/> ลบ</span>
                 {% endif %}
+				{% endaccess %}
             </div>
+			{% endaccess %}
         </li>
         {% endfor %}
     </ul>
